--- a/pom.xml
+++ b/pom.xml
@@ -30,23 +30,32 @@
 		<java.version>22</java.version>
 	</properties>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+		<!-- Hibernate Core -->
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>6.5.2.Final</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+
+		<!-- Ehcache -->
 		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 			<version>3.10.8</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
+
+		<!-- Hibernate Ehcache integration -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>5.6.15.Final</version>
+		</dependency>
+
+		<!-- Hibernate JCache -->
+		<dependency>
+			<groupId>org.hibernate.orm</groupId>
+			<artifactId>hibernate-jcache</artifactId>
+			<version>6.6.0.Final</version>
 		</dependency>
 
 
