--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,15 @@
 
-
-# Spring database connection
+# DataSource configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Show SQL statements in the console
-spring.jpa.show-sql=true
-
-# Format SQL statements for better readability
-#spring.jpa.properties.hibernate.format_sql=true
-
-
+# JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#spring.security.user.username=user
-#spring.security.user.password=user
+# Security configuration
+spring.security.oauth2.client.registration.google.client-id=641467035220-v4jqh39667phbutj0r240i6rc9djsr56.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
