--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Security configuration
-spring.security.oauth2.client.registration.google.client-id=641467035220-v4jqh39667phbutj0r240i6rc9djsr56.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=client_id
+spring.security.oauth2.client.registration.google.client-secret=secret_key
